--- a/restaurator/views/auth/signup.ejs
+++ b/restaurator/views/auth/signup.ejs
@@ -8,6 +8,9 @@
   <input type="text" name="name" class="form-control" placeholder="Name" value="<%= typeof user != 'undefined' && user.username ? user.username : '' %>">
   <br>
   <input type="text" name="email" class="form-control" placeholder="Email" value="<%= typeof user != 'undefined' && user.username ? user.username : '' %>">
+  <% if (typeof message !== "undefined") { %>
+      <div class="error-message"><%= error %></div>
+    <% } %>
   <br>
   <button type="submit" class="btn btn-block btn-primary">Signup</button>
 
