--- a/restaurator/views/auth/login.ejs
+++ b/restaurator/views/auth/login.ejs
@@ -1,14 +1,10 @@
-<h1>Login</h1>
-<form action="/login" method="POST">
-
-  <input type="text" name="username" class="form-control" placeholder="Username" value="<%= typeof user != 'undefined' && user.username ? user.username : '' %>">
+  <h1>Login</h1>
+  <form action="/login" method="POST">
+  <input type="text" name="email" class="form-control" placeholder="Email" value="<%= typeof user != 'undefined' && user.username ? user.username : '' %>">
   <br>
   <input type="password" name="password" class="form-control" placeholder="Password">
   <br>
-  <input type="text" name="name" class="form-control" placeholder="Name" value="<%= typeof user != 'undefined' && user.username ? user.username : '' %>">
-  <br>
-  <input type="text" name="email" class="form-control" placeholder="Email" value="<%= typeof user != 'undefined' && user.username ? user.username : '' %>">
-  <% if (typeof message !== "undefined") { %>
+  <% if (typeof welcome !== "undefined") { %>
       <div class="error-message"><%= error %></div>
     <% } %>
   <br>
