--- a/restaurator/views/index.ejs
+++ b/restaurator/views/index.ejs
@@ -1,2 +1,7 @@
+<br>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+
+<% if (flash.welcome) {%>
+    <p><strong> <%= flash.welcome %> </strong></p>
+<% } %>
