--- a/restaurator/views/layouts/main.ejs
+++ b/restaurator/views/layouts/main.ejs
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Restaurator</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <%- body -%>
-  </body>
+<head>
+  <title>Restaurator</title>
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+</head>
+<body>
+  <h1>Restaurator</h1>
+   <%- body -%>
+ </body>
 </html>
