--- a/restaurator/views/restaurants/index.ejs
+++ b/restaurator/views/restaurants/index.ejs
@@ -1,25 +1,30 @@
+
 <% if(restaurants.length > 0) { %>
 <table class="table table-striped table-hover">
   <thead>
     <tr>
       <th></th>
+      <th>Category</th>
       <th>Name</th>
       <th>Description</th>
       <th>Lat</th>
       <th>Lng</th>
+      <th>Image</th>
       <th></th>
     </tr>
   </thead>
   <tbody>
     <% restaurants.forEach((restaurant) => { %>
       <tr>
-        <td>
-          <img src="/restaurants/<%= restaurant._id %>/pic">
-        </td>
+
+        <td><%= restaurant.category %></td>
         <td><%= restaurant.name %></td>
         <td><%= restaurant.description %></td>
         <td><%= restaurant.location.coordinates[0] %></td>
         <td><%= restaurant.location.coordinates[1] %></td>
+        <td>
+          <img src="/restaurants/<%= restaurant._id %>/pic">
+        </td>
         <td>
           <form action="/restaurants/<%= restaurant._id %>/delete" method="post">
             <input type="submit" value="Delete" class="Delete">
