--- a/restaurator/views/home.ejs
+++ b/restaurator/views/home.ejs
@@ -1,7 +1,10 @@
-
+<section class="container">
+  <div id="map"></div>
+</section>  
     <% Home.forEach((restaurant) => { %>
         <p><%= restaurant.category %> <%= restaurant.name %> <%= restaurant.imageUrl %></p>
         <p></p>
+
     <% }) %>
 
 <p>
