--- a/restaurator/views/layouts/main.ejs
+++ b/restaurator/views/layouts/main.ejs
@@ -11,7 +11,26 @@
     <!-- Google Maps -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCscTbTrX-GiGtgj9E2v6ZmKUoz5xv7b4w&libraries=places&callback=initMap" async defer></script>
 
-
+  <nav class="navbar navbar-default" role="navigation">
+      <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
+      </div>
+      <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-left">
+              <li><a href="#">SignUp</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-center">
+              <li><a href="#">Login</a></li>
+    
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">RegisterRestaurant</a></li>
+          </ul>
+      </div>
 
 
 
