google maps in the db configured

--- a/restaurator/views/home.ejs
+++ b/restaurator/views/home.ejs
@@ -1,6 +1,6 @@
   <div id="map"></div>
-  
-    <% Home.forEach((restaurant) => { %>
+
+    <% restaurants.forEach((restaurant) => { %>
         <p><%= restaurant.category %> <%= restaurant.name %> <%= restaurant.imageUrl %></p>
         <p></p>
 
