--- a/restaurator/views/home.ejs
+++ b/restaurator/views/home.ejs
@@ -1,7 +1,7 @@
   <div id="map"></div>
 
     <% restaurants.forEach((restaurant) => { %>
-        <p><%= restaurant.rating %> <%= restaurant.name %> <%= restaurant.imageUrl %></p>
+        <p><%= restaurant.rating %> <%= restaurant.name %> <%= restaurant.direction %></p>
         <p></p>
 
 
