--- a/restaurator/views/layouts/main.ejs
+++ b/restaurator/views/layouts/main.ejs
@@ -26,7 +26,7 @@
       </div> -->
       <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Restaurator</a>
+      <a href="http://localhost:3000/" class="brand-logo">Restaurator</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="http://localhost:3000/signup">SignUp</a></li>
         <li><a href="http://localhost:3000/login">Login</a></li>
