--- a/restaurator/views/layouts/main.ejs
+++ b/restaurator/views/layouts/main.ejs
@@ -14,7 +14,10 @@
 
 
     <!-- Google Maps -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCscTbTrX-GiGtgj9E2v6ZmKUoz5xv7b4w&libraries=places&callback=initMap" async defer></script>
+
+
 
   <!-- <nav class="navbar navbar-default" role="navigation">
       <div class="navbar-header">
@@ -25,7 +28,7 @@
           </button>
       </div> -->
       <nav>
-    <div class="nav-wrapper">
+    <div class="nav-wrapper orange darken-3">
       <a href="http://localhost:3000/" class="brand-logo">Restaurator</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="http://localhost:3000/signup">SignUp</a></li>
