--- a/restaurator/views/home.ejs
+++ b/restaurator/views/home.ejs
@@ -74,6 +74,7 @@
           <p><%= restaurant.category %></p>
               </div>
               <div class="card-action">
+                <a href="/restaurants/like/<%=restaurant._id%>">Me gusta</a>
                 <a href="#">Pedir</a>
               </div>
             </div>
