--- a/restaurator/views/auth/profile.ejs
+++ b/restaurator/views/auth/profile.ejs
@@ -1,8 +1,7 @@
 <br>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>Login</h1>
+    <p>Welcome to Restaurator</p>
 
 <% if (flash.welcome) {%>
     <p><strong> <%= flash.welcome %> </strong></p>
 <% } %>
-
