--- a/restaurator/views/layouts/main.ejs
+++ b/restaurator/views/layouts/main.ejs
@@ -27,13 +27,13 @@
               <span class="icon-bar"></span>
           </button>
       </div> -->
-      <nav>
+  <nav>
     <div class="nav-wrapper orange darken-3">
-      <a href="http://localhost:3000/" class="brand-logo">Restaurator</a>
+      <a href="/" class="brand-logo">Restaurator</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="http://localhost:3000/signup">SignUp</a></li>
-        <li><a href="http://localhost:3000/login">Login</a></li>
-        <li><a href="http://localhost:3000/restaurants/new">Register</a></li>
+        <li><a href="/signup">SignUp</a></li>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/restaurants/new">Register</a></li>
       </ul>
     </div>
   </nav>
