--- a/restaurator/views/home.ejs
+++ b/restaurator/views/home.ejs
@@ -6,7 +6,7 @@
   <input id="autocomplete" placeholder="Chamberi, Chamartin ..." type="text" />
 </div>
 
-<div id="controls">
+<!-- <div id="controls">
   <select id="country">
     <option value="all">All</option>
     <option value="Chm">Chamberi</option>
@@ -23,7 +23,7 @@
     <option value="ES" selected>Spain</option>
     <option value="uk">United Kingdom</option>
   </select>
-</div>
+</div> -->
 
 <div id="map"></div>
 
