--- a/restaurator/views/restaurants/index.ejs
+++ b/restaurator/views/restaurants/index.ejs
@@ -5,45 +5,25 @@
     <div id="map"></div>
 
 
-<% if(restaurants.length > 0) { %>
-<table class="table table-striped table-hover">
-  <thead>
-    <tr>
-      <th></th>
-      <th>Category</th>
-      <th>Name</th>
-      <th>Rating</th>
-      <th>Lat</th>
-      <th>Lng</th>
-      <th>Image</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% restaurants.forEach((restaurant) => { %>
-      <tr>
-        <td><%= restaurant.name %></td>
-        <td><%= restaurant.rating %></td>
-        <td><%= restaurant.category %></td>
-
-        <td>
-          <img src="/restaurants/<%= restaurant._id %>/pic">
-        </td>
-        <td>
-          <form action="/restaurants/<%= restaurant._id %>/delete" method="post">
-            <input type="submit" value="Delete" class="Delete">
-          </form>
-        </td>
-        <td>
-          <form action="/restaurants/<%= restaurant._id %>/edit" method="post">
-            <input type="submit" value="Edit" class="Edit">
-          </form>
-        </td>
-      </tr>
-
-    <% }) %>
-  </tbody>
-</table>
-<% } else { %>
-  <div class="alert alert-warning" role="alert">No restaurants!</div>
-<% } %>
+    <div class="row">
+                <div class="col s12 m7">
+        <p>  <% restaurants.forEach((restaurant) => { %>
+              <div class="card">
+                <div class="card-image">
+                  <img src="http://abaceriadelsurblog.es/wp-content/uploads/2014/12/restaurantes.jpg">
+                  <span class="card-title"><p><%= restaurant.name %></p></span>
+                </div>
+                <div class="card-content">
+            <p><span>Rating: </span><%= restaurant.rating %></p>
+            <p><%= restaurant.direction %></p>
+            <p><%= restaurant.category %></p>
+                </div>
+                <div class="card-action">
+                  <a href="/restaurants/like/<%=restaurant._id%>">Me gusta</a>
+                  <a href="#">Pedir</a>
+                </div>
+              </div>
+              </p>
+              <% }) %>
+            </div>
+          </div>
