--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,5 @@
 .nav-wrapper {
   display: block;
-
 }
 body {
   padding: 10px;
@@ -18,18 +17,36 @@ a {
   color: #00B7FF;
 }
 
+.chef {
+  width: 310px;
+  height: 310px;
+  background-image: url("../public/images/chef1.gif");
+}
+
 #map {
   padding: 10px;
-  width: 500px;
-  height: 500px;
+  width: 1000px;
+  height: 400px;
   background: lightgray;
   margin:  20px;
+}
+
+.text {
+  text-decoration: none;
+  color: white;
+}
+
+.btn {
+  padding: 10px;
+  margin:  20px;
+  border-radius: 10px;
+
 }
 
 .card {
   margin:  20px;
   padding: 10px;
-  width: 350px;
+  width: 300px;
 
 }
 
