--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,3 +1,4 @@
+<div class="container">
   <h1>Login</h1>
   <form action="/login" method="POST">
   <input type="text" name="email" class="form-control" placeholder="Email" value="<%= typeof user != 'undefined' && user.username ? user.username : '' %>">
@@ -11,3 +12,4 @@
   <button type="submit" class="btn btn-block btn-primary">Login</button>
 
 </form>
+</div>
