--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,3 +1,4 @@
+<div class="container">
 <h1>SignUp</h1>
 <form action="/signup" method="POST">
 
@@ -15,3 +16,4 @@
   <button type="submit" class="btn btn-block btn-primary">Signup</button>
 
 </form>
+</div>
