--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -16,14 +16,21 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCscTbTrX-GiGtgj9E2v6ZmKUoz5xv7b4w&libraries=places&callback=initMap" async defer></script>
 
+
+
   <div>
     <nav class="col s12">
       <div class="nav-wrapper orange darken-3">
         <a href="/" class="brand-logo">Restaurator</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="/signup">SignUp</a></li>
-          <li><a href="/login">Login</a></li>
-          <li><a href="/restaurants/new">Register</a></li>
+      <% if (typeof(session) != 'undefined') { %>
+        <li><a href="/auth/profile/<%= session._id %>" class="item">My Profile</a></li>
+        <li><a href="/logout">Logout</a></li>
+      <% } else { %>
+        <li><a href="/signup">SignUp</a></li>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/restaurants/new">Restaurants</a></li>
+      <% } %>
         </ul>
       </div>
     </nav>
