--- a/views/restaurants/new.ejs
+++ b/views/restaurants/new.ejs
@@ -1,3 +1,4 @@
+<div class="container">
 <% if (typeof(err) !== "undefined") { %>
   <div class="alert alert-danger" role="alert"><%= err %></div>
 <% } %>
@@ -33,20 +34,7 @@
     <input type="text" class="form-control" id="description" placeholder="Description" name="description">
   </div>
 
-  <div class="form-group">
-    <label for="description">Latitude</label>
-    <input type="number" class="form-control" id="latitude" placeholder="Latitude" name="latitude">
-  </div>
-
-  <div class="form-group">
-    <label for="description">Longitude</label>
-    <input type="number" class="form-control" id="longitude" placeholder="Longitude" name="longitude">
-  </div>
-
-  <div class="form-group">
-    <label for="description">Pics</label>
-    <input type="file" class="form-control" id="file" name="pic">
-  </div>
 
   <button type="submit" class="btn btn-primary">Create</button>
 </form>
+</div>
