--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -22,6 +22,7 @@
     <nav class="col s12">
       <div class="nav-wrapper orange darken-3">
         <a href="/" class="brand-logo">Restaurator</a>
+        
         <ul id="nav-mobile" class="right hide-on-med-and-down">
       <% if (typeof(session) != 'undefined') { %>
         <li><a href="/auth/profile/<%= session._id %>" class="item">My Profile</a></li>
@@ -48,8 +49,8 @@
         <footer class="page-footer orange darken-3">
           <div class="container">
             <div class="row">
-              <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
+              <div class="col s12">
+                <h5 class="white-text">Restaurator</h5>
                 <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
               </div>
               <div class="col l4 offset-l2 s12">
@@ -65,8 +66,8 @@
           </div>
           <div class="footer-copyright">
             <div class="container">
-            © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            © 2018 Copyright Text
+            <a class="grey-text text-lighten-4 right" href="#!">About us</a>
             </div>
           </div>
         </footer>
