--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -11,18 +11,15 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
   <script type="text/javascript" src="/javascripts/application-home.js"></script>
 
-
   <!-- Google Maps -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCscTbTrX-GiGtgj9E2v6ZmKUoz5xv7b4w&libraries=places&callback=initMap" async defer></script>
-
-
 
   <div>
     <nav class="col s12">
       <div class="nav-wrapper orange darken-3">
         <a href="/" class="brand-logo">Restaurator</a>
-        
+
         <ul id="nav-mobile" class="right hide-on-med-and-down">
       <% if (typeof(session) != 'undefined') { %>
         <li><a href="/auth/profile/<%= session._id %>" class="item">My Profile</a></li>
@@ -51,17 +48,9 @@
             <div class="row">
               <div class="col s12">
                 <h5 class="white-text">Restaurator</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                <p class="grey-text text-lighten-4">Agregador de webs de restaurantes para reservar mesa o pedir a domicilio.</p>
               </div>
-              <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
-                <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                </ul>
-              </div>
+          
             </div>
           </div>
           <div class="footer-copyright">
