--- a/views/home.ejs
+++ b/views/home.ejs
@@ -59,12 +59,12 @@
             <div class="card-image">
 
               <a class="btn-floating halfway-fab waves-effect waves-light orange darken-3" href="/restaurants/like/<%=restaurant._id%>"><i class="material-icons">add</i></a>
-                <% if (restaurant.imageUrl !== 'undefined') { %>
+                <!-- <% if (restaurant.name == 'undefined') { %>
                 <img src="https://s3-eu-west-1.amazonaws.com/assets.11870.com/originales/imagenes/3c/3c1523506c3cc8a0b640da99b37898a7">
                   <% } else { %>
                     <% var index = Math.floor(Math.random() * restaurants.length); %>
                       <img src=<%= restaurants[index].imageUrl %>>
-                      <% } %>
+                      <% } %> -->
               </div>
             <div class="card-content">
               <span class="card-title"><p><%= restaurant.name %></p></span>
