--- a/views/restaurants/index.ejs
+++ b/views/restaurants/index.ejs
@@ -1,36 +1,36 @@
-<div class="container">
-  <div id="map"></div>
+<% if(restaurants.length > 0) { %>
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th></th>
+      <th>Nonmbre</th>
+      <th>Dirección</th>
+      <th>Valoración</th>
+      <th>Borrar</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% restaurants.forEach((restaurant) => { %>
+      <tr>
+        <td>
+          <img src="/restaurants/<%= restaurant._id %>/pic">
+        </td>
+        <td><%= restaurant.name %></td>
+        <td><%= restaurant.direction %></td>
+        <td><%= restaurant.rating %></td>
 
 
-  <div class="row">
+        <td>
+          <form action="/restaurants/<%= restaurant._id %>/delete" method="post">
+            <input type="submit" value="Delete" class="Delete">
+          </form>
+        </td>
+      </tr>
 
-      <p>
-        <% restaurants.forEach((restaurant) => { %>
-          <div class="col s4 pull-s1">
-          <div class="card">
-            <div class="card-image">
-              <img src="http://abaceriadelsurblog.es/wp-content/uploads/2014/12/restaurantes.jpg">
-              <span class="card-title"><p><%= restaurant.name %></p></span>
-            </div>
-            <div class="card-content">
-              <p><span>Rating: </span>
-                <%= restaurant.rating %>
-              </p>
-              <p>
-                <%= restaurant.direction %>
-              </p>
-              <p>
-                <%= restaurant.category %>
-              </p>
-            </div>
-            <div class="card-action">
-              <a href="/restaurants/like/<%=restaurant._id%>">Me gusta</a>
-              <a href="#">Pedir</a>
-            </div>
-          </div>
-      </p>
-      </div>
-      <% }) %>
-
-  </div>
-</div>
+    <% }) %>
+  </tbody>
+</table>
+<% } else { %>
+  <div class="alert alert-warning" role="alert">No restaurants!</div>
+<% } %>
