--- a/views/restaurants/index.ejs
+++ b/views/restaurants/index.ejs
@@ -2,7 +2,6 @@
 <table class="table table-striped table-hover">
   <thead>
     <tr>
-      <th></th>
       <th>Nonmbre</th>
       <th>Dirección</th>
       <th>Valoración</th>
@@ -13,9 +12,7 @@
   <tbody>
     <% restaurants.forEach((restaurant) => { %>
       <tr>
-        <td>
-          <img src="/restaurants/<%= restaurant._id %>/pic">
-        </td>
+
         <td><%= restaurant.name %></td>
         <td><%= restaurant.direction %></td>
         <td><%= restaurant.rating %></td>
@@ -32,5 +29,8 @@
   </tbody>
 </table>
 <% } else { %>
-  <div class="alert alert-warning" role="alert">No restaurants!</div>
+  <div class="alert alert-warning" role="alert">Tu restaurante se ha borrado</div>
+  <form action="/restaurants/index" method="get">
+    <input type="submit" value="Volver" class="Volver">
+  </form>
 <% } %>
