--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -27,7 +27,8 @@
       <% } else { %>
         <li><a href="/signup">SignUp</a></li>
         <li><a href="/login">Login</a></li>
-        <li><a href="/restaurants/new">Restaurants</a></li>
+
+        <li><a href="/restaurants/index">Restaurants</a></li>
       <% } %>
         </ul>
       </div>
@@ -56,7 +57,7 @@
           <div class="footer-copyright">
             <div class="container">
             © 2018 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">About us</a>
+            <a class="grey-text text-lighten-4 right" href="/restaurants/new">Registrar un restaurante</a>
             </div>
           </div>
         </footer>
