--- a/views/restaurants/index.ejs
+++ b/views/restaurants/index.ejs
@@ -28,9 +28,12 @@
     <% }) %>
   </tbody>
 </table>
+
 <% } else { %>
-  <div class="alert alert-warning" role="alert">Tu restaurante se ha borrado</div>
+
+  <div class="alert" role="alert">Tu restaurante se ha borrado</div>
   <form action="/restaurants/index" method="get">
     <input type="submit" value="Volver" class="Volver">
   </form>
+
 <% } %>
