--- a/views/restaurants/new.ejs
+++ b/views/restaurants/new.ejs
@@ -9,35 +9,40 @@
 
 <form action="new" method="POST">
   <div class="form-group">
-    <label for="name">Restaurant Name</label>
-    <input type="text" class="form-control" id="name" placeholder="Restaurant Name" name="name">
+    <label for="name">Nombre</label>
+    <input type="text" class="form-control" id="name" placeholder="Maruca, Cañadio" name="name">
     <% if (error.name) { %>
       <p style="color: red"> <%= error.name %></p>
     <% } %>
   </div>
 
   <div class="form-group">
-    <label for="email">Restaurant Category</label>
-    <input type="text" class="form-control" id="email" placeholder="Restaurant Category" name="email">
+    <label for="categories">Etiquetas</label>
+    <input type="text" class="form-control" id="email" placeholder="Comida rápida, barato, menú del día" name="category">
     <% if (error.categories) { %>
       <p style="color: red"> <%= error.categories %></p>
     <% } %>
   </div>
 
   <div class="form-group">
-    <label for="password">Restaurant address</label>
-    <input type="password" class="form-control" id="password" placeholder="Restaurant Address" name="password">
-    <% if (error.password) { %>
-      <p style="color: red"> <%= error.password %></p>
+    <label for="direction">Dirección</label>
+    <br>
+    <br>
+    <input type="direction" class="form-control" id="password" placeholder="Calle Alonso Cano, 7" name="direction">
+    <% if (error.direction) { %>
+      <p style="color: red"> <%= error.direction %></p>
     <% } %>
+
   </div>
 
   <div class="form-group">
-    <label for="description">Description</label>
+    <br>
+    <label for="description">Descripción</label>
     <input type="text" class="form-control" id="description" placeholder="Description" name="description">
   </div>
 
 
-  <button type="submit" class="btn btn-primary">Create</button>
+  <button type="submit" class="btn btn-primary orange darken-3">Create</button>
+
 </form>
 </div>
