--- a/views/restaurants/show.ejs
+++ b/views/restaurants/show.ejs
@@ -1,3 +1,34 @@
 <div class="container">
-<h1>hello</h1>
+<h1>hola @<%= user.name %></h1>
+
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th>Nombre</th>
+      <th>Dirección</th>
+      <th>Valoración</th>
+      <th>Borrar</th>
+      <th></th>
+
+    </tr>
+  </thead>
+  <tbody>
+    <% restaurants.forEach((restaurant) => { %>
+      <tr>
+
+        <td><%= restaurant.name %></td>
+        <td><%= restaurant.direction %></td>
+        <td><%= restaurant.rating %></td>
+
+        <td>
+          <form action="/restaurants/show" method="post">
+            <input type="submit" value="Delete" class="Delete">
+          </form>
+        </td>
+      </tr>
+
+    <% }) %>
+  </tbody>
+</table>
+
 </div>
