--- a/views/home.ejs
+++ b/views/home.ejs
@@ -57,7 +57,6 @@
           <div class="col s4 pull-s1">
           <div class="card">
             <div class="card-image">
-
               <a class="btn-floating halfway-fab waves-effect waves-light orange darken-3" href="/restaurants/like/<%=restaurant._id%>"><i class="material-icons">add</i></a>
                 <!-- <% if (restaurant.name == 'undefined') { %>
                 <img src="https://s3-eu-west-1.amazonaws.com/assets.11870.com/originales/imagenes/3c/3c1523506c3cc8a0b640da99b37898a7">
@@ -70,8 +69,12 @@
               <span class="card-title"><p><%= restaurant.name %></p></span>
               <p><span>Rating: </span><%= restaurant.rating %></p>
               <p><%= restaurant.direction %></p>
-              <p><%= restaurant.categories %></p>
-            </div><div class="card-action">
+              <br>
+
+              <div class="chip">
+              <img  src="" alt=""><%= restaurant.categories %></div>
+            </div>
+            <div class="card-action">
               <a href=<%= restaurant.href %>>Pedir a domicilio</a>
               <a href=<%= restaurant.reservation %>>Reservar</a>
             </div>
