feat:example of complete restaurants

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -50,6 +50,75 @@
 
     </div>
 
+    <div class="row">
+      <p>
+          <div class="col s4 pull-s1">
+          <div class="card">
+            <div class="card-image">
+                <img class="restaurant-image" src="https://www.chef2.me/assets/fingers_pollo-0d56aa7dcde9d17b14e4cb737e9e14e1e9e029376b97c8764f8cc50383158ac8.jpg">
+              </div>
+            <div class="card-content">
+              <span class="card-title"><p>Chef2Me</p></span>
+              <p><span>Rating: </span>4.3</p>
+              <p>Calle de Joaquin Maria Lopez, 10 Madrid</p>
+              <br>
+              <div class="chip">
+              <img  src="" alt="">Comida casera</div>
+            </div>
+            <div class="card-action">
+              <a href="https://www.just-eat.es/restaurants-chef2memadrid">Comida Casera</a>
+            </div>
+          </div>
+      </p>
+      </div>
+
+
+
+    <p>
+        <div class="col s4 pull-s1">
+        <div class="card">
+          <div class="card-image">
+              <img src="https://media-cdn.tripadvisor.com/media/photo-s/11/eb/38/e4/photo1jpg.jpg">
+            </div>
+          <div class="card-content">
+            <span class="card-title"><p>Morikaen</p></span>
+            <p><span>Rating: </span>4.4</p>
+            <p>Calle Hilarión Eslava, 17 Madrid</p>
+            <br>
+            <div class="chip">
+            <img  src="" alt="">Japones</div>
+          </div>
+          <div class="card-action">
+            <a href="https://www.just-eat.es/restaurants-morikaengraloraa">Pedir a domicilio</a>
+          </div>
+        </div>
+    </p>
+    </div>
+
+
+
+    <p>
+        <div class="col s4 pull-s1">
+        <div class="card">
+          <div class="card-image">
+              <img src="https://www.cateringclick.com/img/anuncios/fotos/madrid/p01827/img-0.jpg">
+            </div>
+          <div class="card-content">
+            <span class="card-title"><p>Las tartas de Atelier</p></span>
+            <p><span>Rating: </span>4.8</p>
+            <p>Calle de Galileo, 93 Madrid</p>
+            <br>
+            <div class="chip">
+            <img  src="" alt="">Postres y meriendas</div>
+          </div>
+          <div class="card-action">
+            <a href="https://www.lastartasdelatelier.com/">Comprar</a>
+          </div>
+        </div>
+    </p>
+    </div>
+  </div>
+
 
     <div class="row">
       <p>
@@ -83,6 +152,9 @@
       </div>
       <% }) %>
   </div>
+
+
+
 </div>
 
 </div>
