--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -47,10 +47,13 @@ a {
   margin:  20px;
   padding: 5px;
   width: 300px;
-  height: 400px;
+  height: 550px;
 }
 
 
+.restaurant-image {
+  height:300px;
+}
 
 .logo-just {
   width: 50px;
