--- a/views/home.ejs
+++ b/views/home.ejs
@@ -126,7 +126,15 @@
           <div class="col s4 pull-s1">
           <div class="card">
             <div class="card-image">
-              <a class="btn-floating halfway-fab waves-effect waves-light orange darken-3" href="/restaurants/like/<%=restaurant._id%>"><i class="material-icons">add</i></a>
+
+
+
+
+              <!-- <form action="/restaurants/like/<%= restaurant._id %>" method="post">
+                <input class="btn-floating halfway-fab waves-effect waves-light orange darken-3" type="submit" value="+" class="Add">
+              </form> -->
+
+
                 <!-- <% if (restaurant.name == 'undefined') { %>
                 <img src="https://s3-eu-west-1.amazonaws.com/assets.11870.com/originales/imagenes/3c/3c1523506c3cc8a0b640da99b37898a7">
                   <% } else { %>
@@ -145,7 +153,7 @@
             </div>
             <div class="card-action">
               <a href=<%= restaurant.href %>>Pedir a domicilio</a>
-              <a href=<%= restaurant.reservation %>>Reservar</a>
+              <a href="/restaurants/like/<%=restaurant._id%>"><i class="material-icons">favorite</i></a>
             </div>
           </div>
       </p>
