--- a/views/home.ejs
+++ b/views/home.ejs
@@ -55,6 +55,9 @@
           <div class="col s4 pull-s1">
           <div class="card">
             <div class="card-image">
+              <form action="/restaurants/show" method="get">
+                <input class="btn-floating halfway-fab waves-effect waves-light orange darken-3" type="submit" value="Info">
+              </form>
                 <img class="restaurant-image" src="https://www.chef2.me/assets/fingers_pollo-0d56aa7dcde9d17b14e4cb737e9e14e1e9e029376b97c8764f8cc50383158ac8.jpg">
               </div>
             <div class="card-content">
@@ -78,6 +81,9 @@
         <div class="col s4 pull-s1">
         <div class="card">
           <div class="card-image">
+            <form action="/restaurants/show" method="get">
+              <input class="btn-floating halfway-fab waves-effect waves-light orange darken-3" type="submit" value="Info">
+            </form>
               <img src="https://media-cdn.tripadvisor.com/media/photo-s/11/eb/38/e4/photo1jpg.jpg">
             </div>
           <div class="card-content">
@@ -101,6 +107,9 @@
         <div class="col s4 pull-s1">
         <div class="card">
           <div class="card-image">
+            <form action="/restaurants/show" method="get">
+              <input class="btn-floating halfway-fab waves-effect waves-light orange darken-3" type="submit" value="Info">
+            </form>
               <img src="https://www.cateringclick.com/img/anuncios/fotos/madrid/p01827/img-0.jpg">
             </div>
           <div class="card-content">
@@ -130,9 +139,9 @@
 
 
 
-              <!-- <form action="/restaurants/like/<%= restaurant._id %>" method="post">
-                <input class="btn-floating halfway-fab waves-effect waves-light orange darken-3" type="submit" value="+" class="Add">
-              </form> -->
+              <form action="/restaurants/show" method="get">
+                <input class="btn-floating halfway-fab waves-effect waves-light orange darken-3" type="submit" value="Info">
+              </form>
 
 
                 <!-- <% if (restaurant.name == 'undefined') { %>
