fix:show view with each restaurant with id

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -136,12 +136,10 @@
           <div class="card">
             <div class="card-image">
 
-
-
-
-              <form action="/restaurants/show" method="get">
-                <input class="btn-floating halfway-fab waves-effect waves-light orange darken-3" type="submit" value="Info">
-              </form>
+              <a href="/restaurants/<%= restaurant._id %>" class="btn-floating halfway-fab waves-effect waves-light orange darken-3">
+              Info
+              <i class="material-icons">add</i>
+              </a>
 
 
                 <!-- <% if (restaurant.name == 'undefined') { %>
