--- a/views/restaurants/show.ejs
+++ b/views/restaurants/show.ejs
@@ -1,11 +1,41 @@
 <div class="container">
 
-<table class="table table-striped table-hover">
+  <div class="row">
+    <p>
+        <div class="col s4 pull-s1">
+        <div class="card">
+          <div class="card-image">
+
+
+              <img src="https://s3-eu-west-1.amazonaws.com/assets.11870.com/originales/imagenes/3c/3c1523506c3cc8a0b640da99b37898a7">
+              
+            </div>
+          <div class="card-content">
+            <span class="card-title"><p><%= restaurant.name %></p></span>
+            <p><span>Rating: </span><%= restaurant.rating %></p>
+            <p><%= restaurant.direction %></p>
+            <br>
+
+            <div class="chip">
+            <img  src="" alt=""><%= restaurant.categories %></div>
+          </div>
+          <div class="card-action">
+            <a href=<%= restaurant.href %>>Pedir a domicilio</a>
+            <a href="/restaurants/like/<%=restaurant._id%>"><i class="material-icons">favorite</i></a>
+          </div>
+        </div>
+    </p>
+    </div>
+  </div>
+
+
+<!-- <table class="table table-striped table-hover">
   <thead>
     <tr>
       <th>Nombre</th>
       <th>Dirección</th>
       <th>Valoración</th>
+      <th>Imagen</th>
       <th>Borrar</th>
     </tr>
   </thead>
@@ -16,6 +46,7 @@
         <td><%= restaurant.name %></td>
         <td><%= restaurant.direction %></td>
         <td><%= restaurant.rating %></td>
+        <td><%= restaurant.imageUrl %></td>
 
         <td>
           <form action="/restaurants/show" method="post">
@@ -25,6 +56,6 @@
       </tr>
 
   </tbody>
-</table>
+</table> -->
 
 </div>
