--- a/views/restaurants/show.ejs
+++ b/views/restaurants/show.ejs
@@ -8,7 +8,7 @@
 
 
               <img src="https://s3-eu-west-1.amazonaws.com/assets.11870.com/originales/imagenes/3c/3c1523506c3cc8a0b640da99b37898a7">
-              
+
             </div>
           <div class="card-content">
             <span class="card-title"><p><%= restaurant.name %></p></span>
@@ -26,7 +26,12 @@
         </div>
     </p>
     </div>
+        <div class="col s8">
+  <div class="col s7 push-s3"><a class="text" href="/">Próximamente el menú</a></div>
+
   </div>
+
+
 
 
 <!-- <table class="table table-striped table-hover">
