--- a/views/restaurants/index.ejs
+++ b/views/restaurants/index.ejs
@@ -12,24 +12,20 @@
   <tbody>
     <% restaurants.forEach((restaurant) => { %>
       <tr>
-
         <td><%= restaurant.name %></td>
         <td><%= restaurant.direction %></td>
         <td><%= restaurant.rating %></td>
-
-
         <td>
           <form action="/restaurants/<%= restaurant._id %>/delete" method="post">
             <input type="submit" value="Delete" class="Delete">
           </form>
         </td>
       </tr>
-
     <% }) %>
   </tbody>
 </table>
 <% } else { %>
-  <div class="alert alert-warning" role="alert">Tu restaurante se ha borrado</div>
+  <div class="alert" role="alert">Tu restaurante se ha borrado</div>
   <form action="/restaurants/index" method="get">
     <input type="submit" value="Volver" class="Volver">
   </form>
